# twitterapi-cli

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
skills/twitter-agent/: SKILL.md
src/: cache.rs  cli.rs  config.rs  error.rs  main.rs  model.rs  output.rs
src/api/: mod.rs  trends.rs  tweet.rs  user.rs
